SolrJ Tests all pass